src/test/run-pass/empty-mutable-vec.rs
// xfail-boot
fn main() {
    let vec[mutable int] v = vec(mutable);
}

